[package]
name = "fetchlib"
version = "0.0.12"
edition = "2024"
authors = ["Jiei Huang <jaydenkanahuang@outlook.com>"]
description = "A lib for remote server connection through ssh"
license = "MIT"
homepage = "https://github.com/JaydenHuang555/fetch"
documentation = "https://github.com/JaydenHuang555/fetch" 

[dependencies]
serde = {version = "1.0.228", features = ["derive"]}
ssh2 = "0.9.5"
ssh-key = {version = "0.6.7", features = ["rand_core", "ed25519", "getrandom", "encryption"]}
rand = "0.10.0"
ssh-agent-lib = "0.5.2"
anyhow = "1.0.102"
